--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -228,14 +228,11 @@ jobs:
   package-linux-flatpak-nightly:
     name: Linux Flatpak Nightly
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/flathub-infra/flatpak-github-actions:gnome-48
-      options: --privileged
     steps:
-      # Most of these are needed because of a bug in pip download, which causes pip download to attempt to build all build dependencies..
+      # In an optimal world, we would use the old approach of using a container for building the flatpak, but current versions of the flatpak-github-actions image don't have ANY package manager so we can't install dependencies. If we want to go back to a container, we'll need a custom image, preferably with dependencies pre-installed.
       - name: Install dependencies
         run: |
-          yum install -y perl python3 python3-pip python3-devel gobject-introspection-devel meson cmake pkg-config cairo-devel cairo-gobject-devel make automake gcc gcc-c++
+          sudo apt install libcairo2-dev libgirepository-1.0-dev gobject-introspection
       - uses: actions/checkout@v4
         with:
           submodules: recursive
@@ -249,8 +246,9 @@ jobs:
       - name: Run generator
         run: |
           python3 -u installer/linux-flatpak/generator.py nightly
-      - uses: flatpak/flatpak-github-actions/flatpak-builder@v6
-        name: Build Flatpak
+      - name: Build Flatpak
+        uses: docker://ghcr.io/flathub-infra/flatpak-github-actions:gnome-48
+        uses: flatpak/flatpak-github-actions/flatpak-builder@v6
         with:
           bundle: org.skytemple.SkyTemple.flatpak
           manifest-path: installer/linux-flatpak/org.skytemple.SkyTemple.yml
