--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -226,10 +226,9 @@ jobs:
           dist.py "$PATH_MACOS" "skytemple/$GITHUB_REF_NAME/skytemple-$GITHUB_REF_NAME-mac-install-x86-64.dmg"
           dist.py "$PATH_MACOS_ARM" "skytemple/$GITHUB_REF_NAME/skytemple-$GITHUB_REF_NAME-mac-install-arm64.dmg"
   package-linux-flatpak-nightly:
-    name: Linux Flatpak Nightly
+    name: Manifest Linux Flatpak Nightly
     runs-on: ubuntu-latest
     steps:
-      # In an optimal world, we would use the old approach of using a container for building the flatpak, but current versions of the flatpak-github-actions image don't have ANY package manager so we can't install dependencies. If we want to go back to a container, we'll need a custom image, preferably with dependencies pre-installed.
       - name: Install dependencies
         run: |
           sudo apt install libcairo2-dev libgirepository-1.0-dev gobject-introspection
@@ -246,8 +245,28 @@ jobs:
       - name: Run generator
         run: |
           python3 -u installer/linux-flatpak/generator.py nightly
+      - name: Upload generated manifest
+        uses: actions/upload-artifact@v4
+        with:
+          name: flatpak-nightly-manifest
+          path: installer/linux-flatpak/
+  package-linux-flatpak-nightly-build:
+    name: Build Linux Flatpak Nightly
+    runs-on: ubuntu-latest
+    needs: package-linux-flatpak-nightly
+    container:
+      image: ghcr.io/flathub-infra/flatpak-github-actions:gnome-48
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+      - name: Download generated manifest
+        uses: actions/download-artifact@v4
+        with:
+          name: flatpak-nightly-manifest
+          path: installer/linux-flatpak/
       - name: Build Flatpak
-        uses: docker://ghcr.io/flathub-infra/flatpak-github-actions:gnome-48
         uses: flatpak/flatpak-github-actions/flatpak-builder@v6
         with:
           bundle: org.skytemple.SkyTemple.flatpak
