--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -266,10 +266,8 @@ jobs:
         with:
           name: flatpak-nightly-manifest
           path: installer/linux-flatpak/
-      - name: Test 1
-        run: ls -R installer/linux-flatpak && mkdir /home/runner/work/skytemple/skytemple/installer -p && cp installer/linux-flatpak /home/runner/work/skytemple/skytemple/installer/ -r
-      - name: Test 2
-        run: ls -R /home/runner/work/skytemple/skytemple/installer/linux-flatpak
+      - name: Copy some files
+        run: mkdir /home/runner/work/skytemple/skytemple/installer -p && cp installer/linux-flatpak /home/runner/work/skytemple/skytemple/installer/ -r && sysctl kernel.unprivileged_userns_clone=1
       - name: Build Flatpak
         uses: flatpak/flatpak-github-actions/flatpak-builder@v6
         with:
