--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -229,27 +229,38 @@ jobs:
     name: Manifest Linux Flatpak Nightly
     runs-on: ubuntu-latest
     steps:
-      - name: Install dependencies
-        run: |
-          sudo apt install libcairo2-dev libgirepository-1.0-dev gobject-introspection
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - name: Install generator dependencies
+      - name: Install dependencies
         run: |
-          pip3 install -r installer/linux-flatpak/requirements.txt
-      - name: Rewrite version for dev if not tag
-        if: "!startsWith(github.ref, 'refs/tags/')"
-        run: |
-          perl -i -pe "s/version\s*=\s*\"(.*?)(\.rc.*|\.a.*|\.post.*)?\"/version=\"\1.dev0+${GITHUB_SHA::8}\"/" pyproject.toml
-      - name: Run generator
-        run: |
-          python3 -u installer/linux-flatpak/generator.py nightly
-      - name: Upload generated manifest
-        uses: actions/upload-artifact@v4
-        with:
-          name: flatpak-nightly-manifest
-          path: installer/linux-flatpak/
+            sudo apt-get update
+            sudo apt install libcairo2-dev libgirepository-1.0-dev gobject-introspection flatpak flatpak-builder
+            flatpak remote-add --if-not-exists --user flathub https://dl.flathub.org/repo/flathub.flatpakrepo
+            flatpak install flathub org.gnome.Sdk/x86_64/48 --noninteractive
+            pip3 install -r installer/linux-flatpak/requirements.txt
+    #  - name: Install dependencies
+    #    run: |
+    #      sudo apt install libcairo2-dev libgirepository-1.0-dev gobject-introspection
+    #  - uses: actions/checkout@v4
+    #    with:
+    #      submodules: recursive
+    #  - name: Install generator dependencies
+    #    run: |
+    #      pip3 install -r installer/linux-flatpak/requirements.txt
+    #  - name: Rewrite version for dev if not tag
+    #    if: "!startsWith(github.ref, 'refs/tags/')"
+    #    run: |
+    #      perl -i -pe "s/version\s*=\s*\"(.*?)(\.rc.*|\.a.*|\.post.*)?\"/version=\"\1.dev0+${GITHUB_SHA::8}\"/" pyproject.toml
+    #  - name: Run generator
+    #    run: |
+    #      python3 -u installer/linux-flatpak/generator.py nightly
+    #  - name: Upload generated manifest
+    #    uses: actions/upload-artifact@v4
+    #    with:
+    #      name: flatpak-nightly-manifest
+    #      path: installer/linux-flatpak/
+
   package-linux-flatpak-nightly-build:
     name: Build Linux Flatpak Nightly
     runs-on: ubuntu-latest
