--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -239,6 +239,9 @@ jobs:
             flatpak remote-add --if-not-exists --user flathub https://dl.flathub.org/repo/flathub.flatpakrepo
             flatpak install flathub org.gnome.Sdk/x86_64/48 --noninteractive
             pip3 install -r installer/linux-flatpak/requirements.txt
+      - name: Run generator
+        run: |
+          python3 -u installer/linux-flatpak/generator.py nightly
       - name: Build Flatpak
         uses: flatpak/flatpak-github-actions/flatpak-builder@v6
         with:
