--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -236,8 +236,8 @@ jobs:
         run: |
             sudo apt-get update
             sudo apt install libcairo2-dev libgirepository-1.0-dev gobject-introspection flatpak flatpak-builder
-            flatpak remote-add --if-not-exists --user flathub https://dl.flathub.org/repo/flathub.flatpakrepo
-            flatpak install flathub org.gnome.Sdk/x86_64/48 --noninteractive
+            sudo flatpak remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
+            sudo flatpak install flathub org.gnome.Sdk/x86_64/48 --noninteractive
             pip3 install -r installer/linux-flatpak/requirements.txt
       - name: Run generator
         run: |
