i am become root

--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -245,7 +245,8 @@ jobs:
           python3 -u installer/linux-flatpak/generator.py nightly
       - name: Build Flatpak
         run: |
-          sudo flatpak run org.flatpak.Builder --user --force-clean --builddir installer/linux-flatpak/org.skytemple.SkyTemple.yml
+          sudo -i
+          flatpak run org.flatpak.Builder --user --force-clean installer/linux-flatpak/org.skytemple.SkyTemple.yml
       - uses: flatpak/flatpak-github-actions/flat-manager@v6
         name: Deploy to SkyTemple Repo
         if: github.ref == 'refs/heads/master'
