user for flatpak installs

--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -237,8 +237,8 @@ jobs:
             sudo apt-get update
             sudo apt install libcairo2-dev libgirepository-1.0-dev gobject-introspection flatpak
             sudo flatpak remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
-            sudo flatpak install flathub org.gnome.Sdk/x86_64/48 --noninteractive      
-            sudo flatpak install flathub org.flatpak.Builder --noninteractive
+            sudo flatpak install flathub org.gnome.Sdk/x86_64/48 --user --noninteractive      
+            sudo flatpak install flathub org.flatpak.Builder --user --noninteractive
             pip3 install -r installer/linux-flatpak/requirements.txt
       - name: Run generator
         run: |
