--- a/.github/workflows/build-test-publish.yml
+++ b/.github/workflows/build-test-publish.yml
@@ -237,7 +237,7 @@ jobs:
             sudo apt-get update
             sudo apt install libcairo2-dev libgirepository-1.0-dev gobject-introspection flatpak
             pip3 install -r installer/linux-flatpak/requirements.txt
-            flatpak remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
+            flatpak remote-add --user --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
             flatpak install flathub org.gnome.Sdk/x86_64/48 --user --noninteractive      
             flatpak install flathub org.flatpak.Builder --user --noninteractive
       - name: Run generator
